css/styles.css
/* CSS Override Tachyons Styles */


/* ======= Link styling ======= */
a {
	color: #9869D3;
  text-decoration: underline;
  background-color: transparent;
  padding: 0.1rem;
}

a:visited {
	color: #9B7C9E;
  text-decoration: underline;
}

a:hover {
	color: #48118F;
  background-color: #F1EEFF;
  text-decoration: underline;
}

.img-nav a.placeholder,
.img-nav a:visited.placeholder,
.img-nav a:hover.placeholder,
.img-sub a,
.img-sub a:visited,
.img-sub a:hover {
  padding: 0;
  background-color: transparent;
}

.img-sub h3 a:hover {
  background-color: #E0D8FF;
  text-decoration: underline;
  padding: 0.1rem;
}

a.placeholder,
a:visited.placeholder,
a:hover.placeholder,
.horizontal-nav a.placeholder {
  color: #2D72C2;
  font-style: italic;
  background-color: transparent;
  text-decoration: line-through;
}

.footer-link a, .footer-link a:visited {
  /* color: hsla(0, 0%, 100%, .7); */
  display: flex;
  flex-direction: row;
  margin-bottom: 0.5rem;
  text-decoration: none;
}

.footer-link a:hover {
  color: #808080;
  text-decoration: none;
  background-color: transparent;
}

.horizontal-nav a {
  margin-right: 1rem;
  color:#1B1B1B;
}

a.main-title, a:hover.main-title, a:visited.main-title {
  text-decoration: none;
  color: #1B1B1B;
}

.lockednav-links {
  list-style:decimal-leading-zero;
  padding: 1rem 1rem 1rem 2.5rem;
  line-height: 2em;
  margin: 0;
}

.lockednav-links li {
  font-family: 'Playfair Display', serif;
  margin-bottom: 15px;
  font-size: 24px;
}

.lockednav-exlinks li {
  margin-bottom: 15px;
}

.lockednav-exlinks {
  list-style: none;
  padding-left: 0px;
}

a.deprecated-link {
  text-decoration: line-through;
  color: #808080;
  background-color: #eee;
}

a.deprecated-link:hover {
  cursor: not-allowed;
}

.dropdown-nav {
  display: none;
  margin: 0 1rem;
}

.dropdown-nav button {
  background-color: #FAFAFA;
  color: #1b1b1b;
  border: 1px solid #D6D8DB;
  border-radius: 8px;
  padding: 10px 14px;
  min-height: 32px;
  min-width: 40px;
}

.dropdown-nav button:hover {
  background-color: #F3F3F3;
  color: #1b1b1b;
  border: 1px solid #B3B5B8;
  cursor: pointer;
  transition: 0.3s;
}

.bar {
  display: block;
  width: 20px;
  height: 2px;
  margin: 4px auto;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: #1b1b1b;
}

.avatar-group {
  display: flex;
  align-items: center;
}


/* ==================================== */

/* ======= Font styling ======= */

.font {
  font-family: 'Roboto Condensed', sans-serif;
  /* background: linear-gradient( red, #FEFEFE 40%); */
  background: linear-gradient(#fff, #F0EAF2 15%, #FEFEFE 45%);
}

p.playfair {
  font-family: 'Playfair Display', serif;
}

h1 {
      font-family: 'Playfair Display', serif;
      color: #1B1B1B;
      font-weight: 100;
      font-size: 3rem;
}

h2 {
    font-family: 'Playfair Display', serif;
    color: #1B1B1B;
    font-weight: 100;
    font-size: 2rem;
}

h3 {
  font-family: 'Playfair Display', serif;
  color: #1B1B1B;
  font-weight:100;
  font-size: 1.4rem;
}

.img-nav h3{
  margin-top: 1rem;
}

.sub-title {
  color: #828282;
}

.spaced-out {
  letter-spacing: 0.2em;
  color: #1B1B1B;
}

.caption {
  font-style: italic;
  font-size: 14px;
}

.code {
  /* font-family: 'Courier', 'Monaco'; */
  color: #56215C;
  padding: 1.5rem;
  background-color: #F5F3F6;
  border: 1px solid #D9D0DA;
  font-size: 16px;
}

.header {
  display: flex;
  align-items: center;
}

.header-index-text {
  display: flex;
  flex-direction: column;
}

.headline {
  margin-bottom: 4px;
}

.work-title {
  background-color: #dddddd;
  color: #1B1B1B;
  padding: 50px 30px;
  border-left: solid 10px #000;
}

blockquote {
  border-color: #B885F9;
}

/* ==================================== */

/* ======= Image styling ======= */

.mainview {
  background-image: url(images/bg-1.png);
}

.blog-img {
  max-height: 450px;
  border: 1px solid #333;
}

.small-img {
  width: 500px;
}

.column img {
  margin-top: 8px;
  vertical-align: middle;
  width: 100%;
}

.img-section {
  display: flex;
  flex-wrap: wrap;
  margin: 0 0 2rem 0;
  justify-content: space-between;
}

.img-sub {
  width: 48%;
}

.img-sub img {
  max-height: 260px;
  border: 1px solid #ccc;
}

.img-sub h3 {
  margin-top: 0px;
  margin-bottom: 32px;
}

.img-nav {
  display: flex;
  flex-wrap: wrap;
  margin: 0 0 2rem 0;
  justify-content: space-between;
  width: 30%;
}

.img-nav a img {
  border: 1px solid #ccc;
}

/* ==================================== */

/* ======= Background styling ======= */

.blog-callout {
  background-color: #F5F3F6;
  border:1px solid #840A91;
  padding: 3rem;
  margin: 3rem 0;
  line-height: 2em;
}

.blog-callout h3 {
  margin-top: 0;
}

footer {
  padding-top: 1rem;
  padding-bottom: 1rem;
  border-top: 1px solid #DDD;
  background-color: #F1EEF2;
  color: #796F81;
}

.footer-link a,
.footer-link a:visited {
  color: #796F81;
  text-decoration: none;
}

.footer-link a:hover {
  color: #4F4F4F;
}

.footer-link a i {
  font-size: 14px;
  margin-left: 2px;
  transition: all .2s ease-out;
}

.footer-link a:hover i {
  webkit-transform: translate(5px, 0);
  -moz-transform: translate(5px, 0);
  -o-transform: translate(5px, 0);
  -ms-transform: translate(5px, 0);
  transform: translate(5px, 0);
}

.toggle-callout {
  background-color: #FFF6E8;
  color: #656565;
  font-weight: 100;
  padding: 0.4rem 0.7rem;
  margin: 0;
  width:fit-content;
  display: flex;
  align-items: center;
}

/* ==================================== */

/* ======= Table styling ======= */

table {
  font-size: 16px;
  font-weight: 400;
  border-collapse: collapse;
  width: 100%;
}

td,
th {
  border: 1px solid #dddddd;
  text-align: left;
  padding: 8px;
  font-weight: normal;
}

tr:nth-child(even) {
  background-color: #eeeeee;
}

/* ==================================== */

.closeout {
  display: none;
}

.horizontal-nav {
  display: flex;
  margin-left: 16px;
}

.horizontal-nav-index {
  display: flex;
  flex-wrap: wrap;
}
/* ... */

